# research-infra

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: contract.md  upgrade-0.1.0.md  upgrade-0.1.1.md  use-guide.md
src/research_infra/: audit.py  batch.py  cache.py  cli.py  memory.py  provenance.py  scan.py  schema.py  workspace.py
src/research_infra.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_audit.py  test_batch.py  test_cache.py  test_cli.py  test_contract_doc.py  test_contract_fixture.py  test_memory.py  test_memory_cli.py  test_provenance.py  test_readme.py  test_release_docs.py  test_scan.py  test_schema.py  test_use_guide.py
tests/fixtures/minimal_project/results/E50001/: batch.json
tests/fixtures/minimal_project/results/E50001/runs/R000001/: params.json  solution.json
