[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-infra"
version = "0.1.0"
description = "Filesystem-first OR research infrastructure"
requires-python = ">=3.10"
dependencies = [
  "duckdb>=1.0.0",
  "pydantic>=2.7",
  "PyYAML>=6.0",
]

[project.scripts]
ri = "research_infra.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
